# wacom_control_panel

./: .gitignore  README.md  pyproject.toml
tests/: test_backend.py  test_keymap.py  test_libwacom_db.py  test_mapping.py  test_pad_capture.py  test_pad_layout.py  test_persistence.py  test_phase3.py  test_pressure_presets.py  test_ring_daemon.py  test_ring_setup.py  test_ring_translator.py  test_store.py  test_tablet_setup.py  test_viewmodels.py
wacom_panel/: __init__.py  __main__.py  app.py
wacom_panel/backend/: README.md  __init__.py  devices.py  displays.py  xsetwacom.py
wacom_panel/core/: README.md  __init__.py  engine.py  libwacom_db.py  mapping.py  pad_capture.py  pad_layout.py  persistence.py  pressure_presets.py  profile.py  ring_setup.py  store.py  tablet_setup.py  watcher.py
wacom_panel/daemon/: README.md  __init__.py  keymap.py  ring_daemon.py  ring_translator.py
wacom_panel/layouts/: README.md  intuos-pro-m.json
wacom_panel/ui/: README.md  canvas.py  main_window.py  mapping_page.py  profile_bar.py  viewmodels.py
wacom_panel/ui/qml/: ActionEditor.qml  Main.qml  MappingPage.qml  PadPage.qml  PenPage.qml  PressureCurve.qml  ScreenView.qml  SetupWizard.qml  TabletAreaView.qml  TouchPage.qml  UnknownTabletDialog.qml
